--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,12 @@ h1,h2{
   .h1, #img-caption{
     text-align: center;
   }
+@media (max-width:600px) {
+  *{
+    font-size: 15px;
+  }
+  h1,h2{
+    text-align:center;
+    font-size:45px;
+  }
+}
